--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ main {
 main .img {
   grid-column: 1/3;
   height: 260px;
-  background-image: url(/assets/images/image-web-3-desktop.jpg);
+  background-image: url(../assets/images/image-web-3-desktop.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -231,7 +231,7 @@ main .box .text p {
     display: block;
   }
   main .img {
-    background-image: url(/assets/images/image-web-3-mobile.jpg);
+    background-image: url(../assets/images/image-web-3-mobile.jpg);
     background-repeat: no-repeat;
     background-size: cover;
   }
